force-app/main/default/objects/Sales_Information_Bulletin__c/Sales_Information_Bulletin__c.object-meta.xml
<CustomObject>
    <label>Sales Information Bulletin</label>
    <nameField>
        <label>Sales Information Bulletin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Information Bulletins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>