force-app/main/default/objects/Sales_Information_Bulletin__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>