force-app/main/default/objects/Sales_Information_Bulletin__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <label>Distribution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Sales Managers</fullName>
            </value>
            <value>
                <fullName>Regional Sales Managers</fullName>
            </value>
            <value>
                <fullName>Contract Administration</fullName>
            </value>
            <value>
                <fullName>Sales Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>