force-app/main/default/objects/Sales_Information_Bulletin__c/fields/Impacted_Lengths__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Lengths__c</fullName>
    <label>Impacted Lengths</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length</valueSetName>
    </valueSet>
</CustomField>