force-app/main/default/objects/Sales_Information_Bulletin__c/fields/Impacted_Modes__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Modes__c</fullName>
    <label>Impacted Modes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode</valueSetName>
    </valueSet>
</CustomField>