force-app/main/default/objects/Sales_Information_Bulletin__c/fields/Impacted_Styles__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Styles__c</fullName>
    <label>Impacted Styles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Style</valueSetName>
    </valueSet>
</CustomField>