force-app/main/default/objects/Sales_Information_Bulletin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buy_Design_Section__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Impacted_Lengths__c</columns>
    <columns>Impacted_Modes__c</columns>
    <columns>Impacted_Styles__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>